# fitsGen

./: CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  fitsGenLib.py
cmt/: .cvsignore  cleanup.csh  cleanup.sh  myLatData.fits  requirements  rh72_gcc2953.make  setup.csh  setup.sh
data/: EvtClassDefs_Test.xml  FT1variables  LLEvariables  ft1.tpl  ft1_p7.tpl  ft2.tpl  irfTupleNames  jobOptions_rocking.txt  lle.tpl  makeD2.py  merit.root  pass4_cuts  pass5_cuts  std_cuts
doc/: Doxyfile  FT1_Documentation.html  release.notes
fitsGen/: EventClassifier.h  Ft1File.h  Ft2File.h  FtFileBase.h  MeritFile.h  MeritFile2.h  Util.h  XmlEventClassifier.h
pfiles/: makeFT1.par  makeFT1_kluge.par
python/: DC2_Classifier.py  EventClassifier.py  Ft1Validator.py  P6V3_classifier.py  Pass4_Classifier.py  Pass5_Classifier.py  Pass5_Classifier_old.py  Pass6_kluge_Classifier.py  Pass6_kluge_classifier.py
src/: EventClassifier.cxx  Ft1File.cxx  Ft2File.cxx  FtFileBase.cxx  MeritFile.cxx  MeritFile2.cxx  Util.cxx  XmlEventClassifier.cxx  makeFT1.cxx  makeFT2.cxx  makeFT2a.cxx
src/convertFT1/: convertFT1.cxx
src/egret2FT1/: EgretSmdb.cxx  EgretSmdb.h  egret2FT1.cxx
src/irfTuple/: irfTuple.cxx
src/makeFT1/: makeFT1.cxx
src/makeFT1_kluge/: makeFT1_kluge.cxx
src/makeFT2/: makeFT2.cxx
src/makeFT2a/: makeFT2a.cxx
src/test/: test.cxx
